--- a/index.html
+++ b/index.html
@@ -250,7 +250,20 @@
              <img src="https://img.icons8.com/color/48/000000/twitter-squared.png"/>
              <img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/>
           </div>
-  
+          <div>
+    <h1 class="mu">Mail us</h1>
+
+    <div class="container-fluid border">
+ <form action="https://formspree.io/f/mwkwdgga" method="POST">
+     <input class="inp" type="text" name="name" placeholder="name">
+    <input class="inp" type="email" name="email" placeholder="mail">
+    <textarea class="inp"></textarea>
+    <center>    <buttton type="submit" class="btn btn-primary">Mail!</buttton>
+</center>
+ </form>
+</div>
+</div>
+
   
         </div>
   
