--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
      <input class="inp" type="text" name="name" placeholder="name">
     <input class="inp" type="email" name="email" placeholder="mail">
     <textarea class="inp"></textarea>
-    <center>    <buttton type="submit" class="btn btn-primary">Mail!</buttton>
+    <center>    <buttton type="submit" value="send" class="btn btn-primary">Mail!</buttton>
 </center>
  </form>
 </div>
